crates/areev-core/tests/snapshots/tool_schema_snapshots__search_gemini_tools.snap
---
source: crates/areev-core/tests/tool_schema_snapshots.rs
expression: "render_json(&t, ProviderKind::GeminiTools).unwrap()"
---
{
  "description": "Search the web and return ranked results.",
  "name": "search_web",
  "parameters": {
    "properties": {
      "limit": {
        "maximum": 50,
        "minimum": 1,
        "type": "integer"
      },
      "query": {
        "type": "string"
      },
      "safe_search": {
        "enum": [
          "off",
          "moderate",
          "strict"
        ],
        "type": "string"
      }
    },
    "required": [
      "query"
    ],
    "type": "object"
  }
}
