crates/areev-core/tests/snapshots/tool_schema_snapshots__search_hermes.snap
---
source: crates/areev-core/tests/tool_schema_snapshots.rs
expression: "render_text(&t, ProviderKind::Hermes).unwrap()"
---
<tool>
  <name>search_web</name>
  <description>Search the web and return ranked results.</description>
  <parameters>
```json
{"properties":{"limit":{"maximum":50,"minimum":1,"type":"integer"},"query":{"type":"string"},"safe_search":{"enum":["off","moderate","strict"],"type":"string"}},"required":["query"],"type":"object"}
```
  </parameters>
</tool>
