crates/areev-core/tests/snapshots/tool_schema_snapshots__search_llama31.snap
---
source: crates/areev-core/tests/tool_schema_snapshots.rs
expression: "render_text(&t, ProviderKind::Llama31).unwrap()"
---
Tool: search_web
Description: Search the web and return ranked results.
Parameters: {"properties":{"limit":{"maximum":50,"minimum":1,"type":"integer"},"query":{"type":"string"},"safe_search":{"enum":["off","moderate","strict"],"type":"string"}},"required":["query"],"type":"object"}
