crates/areev-core/tests/snapshots/tool_schema_snapshots__search_mcp_tools.snap
---
source: crates/areev-core/tests/tool_schema_snapshots.rs
expression: "render_json(&t, ProviderKind::McpTools).unwrap()"
---
{
  "description": "Search the web and return ranked results.",
  "inputSchema": {
    "properties": {
      "limit": {
        "maximum": 50,
        "minimum": 1,
        "type": "integer"
      },
      "query": {
        "type": "string"
      },
      "safe_search": {
        "enum": [
          "off",
          "moderate",
          "strict"
        ],
        "type": "string"
      }
    },
    "required": [
      "query"
    ],
    "type": "object"
  },
  "name": "search_web"
}
