crates/areev-core/tests/snapshots/tool_schema_snapshots__slack_gemini_tools.snap
---
source: crates/areev-core/tests/tool_schema_snapshots.rs
expression: "render_json(&t, ProviderKind::GeminiTools).unwrap()"
---
{
  "description": "Post a message to a Slack channel.",
  "name": "slack_post_message",
  "parameters": {
    "properties": {
      "channel": {
        "description": "Channel ID or name",
        "type": "string"
      },
      "text": {
        "description": "Message body",
        "type": "string"
      },
      "thread_ts": {
        "description": "Optional thread timestamp",
        "type": "string"
      }
    },
    "required": [
      "channel",
      "text"
    ],
    "type": "object"
  }
}
