crates/areev-core/tests/snapshots/tool_schema_snapshots__slack_hermes.snap
---
source: crates/areev-core/tests/tool_schema_snapshots.rs
expression: "render_text(&t, ProviderKind::Hermes).unwrap()"
---
<tool>
  <name>slack_post_message</name>
  <description>Post a message to a Slack channel.</description>
  <parameters>
```json
{"properties":{"channel":{"description":"Channel ID or name","type":"string"},"text":{"description":"Message body","type":"string"},"thread_ts":{"description":"Optional thread timestamp","type":"string"}},"required":["channel","text"],"type":"object"}
```
  </parameters>
</tool>
